# ecs

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-publish.yml
control/: client.py  magics.py  server.py  subsystem.py  types.py
lib/: daemon.py  tcp.py  transactions.py
src/ipi_ecs/cli/: captive_cli.py  main.py
src/ipi_ecs/cli/commands/: call_event.py  echo.py  keyboard_jog.py  log_query.py  server.py  write.py
src/ipi_ecs/cli/logging/: config.py  tui_app.py
src/ipi_ecs/control/: client.py  magics.py  server.py  types.py
src/ipi_ecs/core/: daemon.py  mt_events.py  segmented_bytearray.py  tcp.py  transactions.py
src/ipi_ecs/db/: db_library.py
src/ipi_ecs/dds/: client.py  lifecycle_manager.py  magics.py  server.py  subsystem.py  types.py
src/ipi_ecs/gui/: db_gui.py  experiment_controller_gui.py  lifecycle_gui.py
src/ipi_ecs/logging/: client.py  db_reader.py  index.py  journal.py  logger_server.py  protocol.py  reader.py  timefmt.py  viewer.py
src/ipi_ecs/services/: dds_server_service.py  lifecycle_manager_service.py  logger_server_service.py
src/ipi_ecs/subsystems/: experiment_client.py  experiment_controller.py  lifecycle_manager.py
src/ipi_ecs/util/: export_experiment.py
test/: transactions.py
test/control/: client_a.py  client_b.py  server.py
test/db/: db_create.py  db_read.py
test/dds/: client_a.py  client_b.py  server.py
test/logs/: event_list.py  logger.py
test/tcp/: client.py  server.py
