[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ipi-ecs"
version = "0.1.0"
description = "IPI EUVL experiment control system"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "platformdirs>=4.2",
  "prompt_toolkit>=3.0",
  "python-dateutil>=2.9",
]

license = { text = "MIT" }
authors = [{ name = "IPI Research Group" }]

[project.scripts]
ipi-ecs = "ipi_ecs.cli.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "ruff>=0.6",
  "mypy>=1.10",
]

[tool.pylint.MAIN]
init-hook = """
try: import pylint_venv
except ImportError: pass
else: pylint_venv.inithook()
"""